server experience disillusionment sending headers

--- a/lib/html/index.html
+++ b/lib/html/index.html
@@ -25,5 +25,6 @@
         <button class="btn js-btn" data-function="generate-story">Show my story</button>
     </fieldset>
 
+    <script src="assets/js/app.js"></script>
 </body>
 </html>
