--- a/lib/html/index.html
+++ b/lib/html/index.html
@@ -13,7 +13,7 @@
         </label>
         <label>
             <span>Gender</span>
-            <select name="" id="">
+            <select name="gender">
                 <option value="male">Male</option>
                 <option value="female">Female</option>
                 <option value="trans">Trans*</option>
@@ -22,8 +22,10 @@
             </select>
         </label>
 
-        <button class="btn js-btn" data-function="generate-story">Show my story</button>
+        <button class="btn js-btn" data-function="generateStory">Show my story</button>
     </fieldset>
+
+    <section id="results"></section>
 
     <script src="assets/js/app.js"></script>
 </body>
