--- a/lib/html/index.html
+++ b/lib/html/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
 	<header class="global-header">
-		<h1 class="global-header--text">Be like ${siteName}</h1>
+		<h1 class="global-header--text">
+			<span>Be like ${siteName}</span>
+			<button class="global-header--button ${hasLoadedStory} pure-button button-primary js-btn toggle-all" data-function="toggleDynamicElements">Create Your Own Story</button></h1>
 	</header>
 
 	<div id="story-generator" class="pure-form pure-form-stacked ${hasLoadedStory}">
@@ -41,10 +43,6 @@
 	<section id="share" class="${hasLoadedStory}">
 		<button class="pure-button button-primary button-primary--margin-top js-btn" data-function="shareStory">Share</button>
 	</section>
-
-	<div id="story-show-hide" class="${hasLoadedStory}">
-		<button class="pure-button button-primary button-primary--margin-top js-btn" data-function="showGenerator">Create Your Own Story</button>
-	</div>
 
 	<canvas id="image-maker"></canvas>
 
