style tweak, html tweak, js tweaks

--- a/lib/html/index.html
+++ b/lib/html/index.html
@@ -11,7 +11,7 @@
 	<header class="global-header">
 		<h1 class="global-header--text">
 			<span>Be like ${siteName}</span>
-			<button class="global-header--button ${hasLoadedStory} pure-button button-primary js-btn toggle-all" data-function="toggleDynamicElements">Create Your Own Story</button></h1>
+			<button class="global-header--button ${hasLoadedStory} pure-button button-primary js-btn toggle-all" data-function="toggleDynamicElements, clearPathname">Create Your Own Story</button></h1>
 	</header>
 
 	<div id="story-generator" class="pure-form pure-form-stacked ${hasLoadedStory}">
