--- a/lib/html/index.html
+++ b/lib/html/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+
+	<meta property="og:url" content="${pageUrl}" />
+	<meta property="og:title" content="Nihilist ${siteName}" />
+	<!-- <meta property="og:image" content="" /> -->
+
 	<title>Nihilist ${siteName}</title>
 
 	<link rel="stylesheet" href="//yui.yahooapis.com/pure/0.6.0/pure-min.css">
