--- a/lib/html/index.html
+++ b/lib/html/index.html
@@ -5,7 +5,7 @@
 
 	<meta property="og:url" content="${pageUrl}" />
 	<meta property="og:title" content="Nihilist ${siteName}" />
-	<!-- <meta property="og:image" content="" /> -->
+	<meta property="og:image" content="" />
 
 	<title>Nihilist ${siteName}</title>
 
@@ -13,6 +13,23 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+	<script>
+		window.fbAsyncInit = function() {
+			FB.init({
+				appId      : '900042220102582',
+				xfbml      : true,
+				version    : 'v2.5'
+			});
+		};
+
+		(function(d, s, id){
+			var js, fjs = d.getElementsByTagName(s)[0];
+			if (d.getElementById(id)) {return;}
+			js = d.createElement(s); js.id = id;
+			js.src = "//connect.facebook.net/en_US/sdk.js";
+			fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));
+	</script>
 	<header class="global-header">
 		<h1 class="global-header--text">
 			<span>Be like ${siteName}</span>
