--- a/lib/html/index.html
+++ b/lib/html/index.html
@@ -5,7 +5,7 @@
 
 	<meta property="og:url" content="${pageUrl}" />
 	<meta property="og:title" content="Nihilist ${siteName}" />
-	<meta property="og:image" content="" />
+	<meta property="og:image" content="${ogImage}" />
 
 	<title>Nihilist ${siteName}</title>
 
