--- a/lib/html/index.html
+++ b/lib/html/index.html
@@ -6,6 +6,7 @@
 	<meta property="og:url" content="${pageUrl}" />
 	<meta property="og:title" content="Nihilist ${siteName}" />
 	<meta property="og:image" content="${ogImage}" />
+	<meta property="fb:app_id" content="900042220102582" />
 
 	<title>Nihilist ${siteName}</title>
 
