--- a/lib/html/index.html
+++ b/lib/html/index.html
@@ -67,6 +67,8 @@
 		<button class="pure-button button-primary button-primary--margin-top js-btn" data-function="shareStory">Share</button>
 	</section>
 
+	<footer>made with &hellip;meh by <a href="https://github.com/tbremer/nihilistjill.com" target="_blank">tom</a></footer>
+
 	<script src="assets/js/app.js"></script>
 </body>
 </html>
